plugins {
    id 'java'
    id 'org.springframework.boot' version '2.5.7'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

allprojects {
    compileJava {
        sourceCompatibility = '11'
        targetCompatibility = '11'
    }

    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group 'org.panyukovnn.lifemanager'
    version '1.0'

    apply from: "$rootProject.projectDir/ext.gradle"

    repositories {
        mavenLocal()
        mavenCentral()
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    configurations {
        compileOnly.extendsFrom annotationProcessor
        testCompileOnly.extendsFrom annotaionProcessor
        testAnnotationProcessor.extendsFrom annotaionProcessor
    }

    compileJava {
        options.annotationProcessorPath = configurations.annotationProcessor
    }

    dependencies {
        implementation library.springSwagger
        implementation library.springSwaggerUI

        annotationProcessor library.lombok

        testImplementation libraryTest.junit5api
        testImplementation libraryTest.junit5engine
        testImplementation libraryTest.mockitoJunitJupiter

        testImplementation libraryTest.springBootTest
        testImplementation libraryTest.springSecurityTest
    }

    test {
        useJUnitPlatform()
    }
}

// Не собираем корневой проект, поскольку у него нет кода
jar.enabled = false
build.enabled = false
bootJar.enabled = false
bootJarMainClassName.enabled = false
